[gd_scene load_steps=51 format=3 uid="uid://3gnpc0j2qsbb"]

[ext_resource type="FontFile" uid="uid://c34mefa01f57l" path="res://game/assets/Awexbmp.ttf" id="1_6hkoo"]
[ext_resource type="Texture2D" uid="uid://cn58rauv07lmj" path="res://game/UI/letter_select/character_arrow.png" id="2_6hkoo"]
[ext_resource type="Script" uid="uid://by0u21px82mk" path="res://game/UI/letter_select/letter_select.gd" id="2_ohi1y"]
[ext_resource type="Texture2D" uid="uid://1ajk10keexwp" path="res://game/assets/circleblur.png" id="4_ohi1y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6hkoo"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8hfja"]
load_path = "res://.godot/imported/circleblur.png-c975c87a170c000641d2a0292e8ee06c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wrjle"]
texture = SubResource("CompressedTexture2D_8hfja")
modulate_color = Color(1, 1, 1, 0.117647)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pw3bj"]
load_path = "res://.godot/imported/circleblur.png-c975c87a170c000641d2a0292e8ee06c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1m5ed"]
texture = SubResource("CompressedTexture2D_pw3bj")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nkghd"]
load_path = "res://.godot/imported/circleblur.png-c975c87a170c000641d2a0292e8ee06c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uqx15"]
texture = SubResource("CompressedTexture2D_nkghd")
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dlr75"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_d1tdj"]
load_path = "res://.godot/imported/circleblur.png-c975c87a170c000641d2a0292e8ee06c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i1o5c"]
texture = SubResource("CompressedTexture2D_d1tdj")
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bl8yw"]
load_path = "res://.godot/imported/checkbutton_checked.png-b36572280f1be19be7d6d7c752689b3b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cqepb"]
load_path = "res://.godot/imported/checkbutton_checked_disabled.png-84a069d30ee49eab8f60a7f9e12adf67.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3e4s3"]
load_path = "res://.godot/imported/checkbutton_unchecked.png-c0b2875430ee3d21b14cb5e8b1806f32.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xf54m"]
load_path = "res://.godot/imported/checkbutton_unchecked_disabled.png-8d42263262fcb04014a318ea7a11bb33.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4wuwd"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wy6xv"]
load_path = "res://.godot/imported/grabber_base.png-4fa9e9a1ab76204f2d3ff4b350257aac.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_88s52"]
load_path = "res://.godot/imported/grabber_disabled.png-b942f46d51d076e0a97b4f7a3a618247.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_glaxy"]
load_path = "res://.godot/imported/grabber_highlight.png-81acaa3e268d5fa7eb96c07e223666a7.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_03j5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cg8f8"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fe5ql"]
color = Color(1, 1, 1, 0.588235)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kfwnf"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m2y41"]
load_path = "res://.godot/imported/textbackground.png-ec5c013de4da0abe3042b71e78c6c8f3.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fhlsl"]
texture = SubResource("CompressedTexture2D_m2y41")
expand_margin_left = 32.0
expand_margin_top = 8.0
expand_margin_right = 32.0
expand_margin_bottom = 8.0
modulate_color = Color(0, 0, 0, 0.78431374)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7iytk"]
load_path = "res://.godot/imported/textbackground.png-ec5c013de4da0abe3042b71e78c6c8f3.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qdrjc"]
texture = SubResource("CompressedTexture2D_7iytk")
expand_margin_left = 32.0
expand_margin_top = 8.0
expand_margin_right = 32.0
expand_margin_bottom = 8.0
modulate_color = Color(0, 0, 0, 0.78431374)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e7568"]
load_path = "res://.godot/imported/circleblur.png-c975c87a170c000641d2a0292e8ee06c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8xye7"]
texture = SubResource("CompressedTexture2D_e7568")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sg0fx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uvqay"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2nsqx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hab6o"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v8y3s"]
load_path = "res://.godot/imported/circleblur.png-c975c87a170c000641d2a0292e8ee06c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yli77"]
texture = SubResource("CompressedTexture2D_v8y3s")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ytu5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_75mtq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wui2b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mivdk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oolrq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_huwwt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1fydn"]

[sub_resource type="Theme" id="Theme_s6p7f"]
default_font = ExtResource("1_6hkoo")
default_font_size = 16
BoxContainer/constants/separation = 4
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/fonts/font = ExtResource("1_6hkoo")
Button/styles/disabled = SubResource("StyleBoxEmpty_6hkoo")
Button/styles/focus = SubResource("StyleBoxTexture_wrjle")
Button/styles/hover = SubResource("StyleBoxTexture_1m5ed")
Button/styles/hover_pressed = SubResource("StyleBoxTexture_uqx15")
Button/styles/normal = SubResource("StyleBoxEmpty_dlr75")
Button/styles/pressed = SubResource("StyleBoxTexture_i1o5c")
CheckButton/icons/checked = SubResource("CompressedTexture2D_bl8yw")
CheckButton/icons/checked_disabled = SubResource("CompressedTexture2D_cqepb")
CheckButton/icons/checked_disabled_mirrored = null
CheckButton/icons/unchecked = SubResource("CompressedTexture2D_3e4s3")
CheckButton/icons/unchecked_disabled = SubResource("CompressedTexture2D_xf54m")
HSeparator/constants/separation = 8
HSeparator/styles/separator = SubResource("StyleBoxEmpty_4wuwd")
HSlider/icons/grabber = SubResource("CompressedTexture2D_wy6xv")
HSlider/icons/grabber_disabled = SubResource("CompressedTexture2D_88s52")
HSlider/icons/grabber_highlight = SubResource("CompressedTexture2D_glaxy")
HSlider/styles/grabber_area = SubResource("StyleBoxEmpty_03j5v")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxEmpty_cg8f8")
HSlider/styles/slider = SubResource("StyleBoxLine_fe5ql")
Label/fonts/font = ExtResource("1_6hkoo")
LineEdit/styles/focus = SubResource("StyleBoxEmpty_kfwnf")
LineEdit/styles/normal = SubResource("StyleBoxTexture_fhlsl")
LineEdit/styles/read_only = SubResource("StyleBoxTexture_qdrjc")
SpinBox/styles/down_background_hovered = SubResource("StyleBoxTexture_8xye7")
SpinBox/styles/down_background_pressed = SubResource("StyleBoxEmpty_sg0fx")
SpinBox/styles/field_and_buttons_separator = SubResource("StyleBoxEmpty_uvqay")
SpinBox/styles/up_background = SubResource("StyleBoxEmpty_2nsqx")
SpinBox/styles/up_background_disabled = SubResource("StyleBoxEmpty_hab6o")
SpinBox/styles/up_background_hovered = SubResource("StyleBoxTexture_yli77")
SpinBox/styles/up_background_pressed = SubResource("StyleBoxEmpty_6ytu5")
SpinBox/styles/up_down_buttons_separator = SubResource("StyleBoxEmpty_75mtq")
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_wui2b")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_mivdk")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_oolrq")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_huwwt")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_1fydn")

[sub_resource type="Animation" id="Animation_6hkoo"]
resource_name = "up_pressed"
length = 0.1333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("TextureRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.025000002, 0, 0.025000002, 0, 0, -0.050000004, 0, 0, 0),
"times": PackedFloat32Array(0, 0.06666667, 0.13333334)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-11.5, -0.25, 0, 0.25, 0, -16, -0.025000002, 0, 0.025000002, 0, -11.5, -0.050000004, 0, 0, 0),
"times": PackedFloat32Array(0, 0.06666667, 0.1333)
}

[sub_resource type="Animation" id="Animation_ohi1y"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-11.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.06665, 0, 0.06665, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(23, -0.06665, 0, 0.06665, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_8hfja"]
resource_name = "down_pressed"
length = 0.1333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("TextureRect2:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(0, -0.06665, 0, 0.06665, 0, 0, -0.011116667, 0, 0.011100002, 0, 0, -0.022216668, 0, 0, 0),
"times": PackedFloat32Array(0, 0.0667, 0.1333)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(23, -0.06665, 0, 0.06665, 0, 27.5, -0.011116667, 0, 0.011100002, 0, 23, -0.022216668, 0, 0, 0),
"times": PackedFloat32Array(0, 0.0667, 0.1333)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8hfja"]
_data = {
&"RESET": SubResource("Animation_ohi1y"),
&"down_pressed": SubResource("Animation_8hfja"),
&"up_pressed": SubResource("Animation_6hkoo")
}

[node name="Button" type="Button"]
offset_left = 31.0
offset_top = 25.0
offset_right = 76.0
offset_bottom = 48.0
theme = SubResource("Theme_s6p7f")
text = "A"
flat = true
script = ExtResource("2_ohi1y")

[node name="Highlight" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -1.0
anchor_right = 1.0
anchor_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_ohi1y")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.5
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_6hkoo")
expand_mode = 1
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_6hkoo")
expand_mode = 1
stretch_mode = 3
flip_v = true
metadata/_edit_use_anchors_ = true

[node name="DownButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="UpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.0
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8hfja")
}

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
